--- a/ShopTARgv24/Views/RealEstate/CreateUpdate.cshtml
+++ b/ShopTARgv24/Views/RealEstate/CreateUpdate.cshtml
@@ -9,8 +9,6 @@ else
     <h1>Create</h1>
 }
 
-
-
 <div>
     <form method="post" enctype="multipart/form-data">
         <input asp-for="Id" type="hidden" />
@@ -43,6 +41,22 @@ else
             <div class="col-sm-10">
                 <input asp-for="BuildingType" class="form-control" />
             </div>
+        </div>
+
+        <div class="form-group row">
+            <label asp-for="Files" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-5">
+                <div class="custom-file">
+                    <input class="form-control" asp-for="Files" multiple type="file" />
+                </div>
+            </div>
+        </div>
+
+        <div>
+            @foreach (var images in Model.Image)
+            {
+                <partial name="_Images" model="images" />
+            }
         </div>
 
         @if (Model.Id.HasValue)
