--- a/ShopTARgv24/Views/Kindergarten/Index.cshtml
+++ b/ShopTARgv24/Views/Kindergarten/Index.cshtml
@@ -1,5 +1,10 @@
 ﻿@model IEnumerable<ShopTARgv24.Models.Kindergarten.KindergartenIndexViewModel>
 
+
+<div>
+    <a asp-action="create" asp-controller="Kindergarten" type="submit" class="btn btn-primary">Create</a>
+</div>
+
 <div class="h1 text-center">Kindergartens</div>
 <form method="post">
     <div class="table-responsive shadow rounded">
