--- a/ShopTARgv24/Views/Kindergarten/Delete.cshtml
+++ b/ShopTARgv24/Views/Kindergarten/Delete.cshtml
@@ -60,7 +60,7 @@
                 <form asp-action="DeleteConfirmation">
                     <input type="hidden" asp-for="Id" />
                     <input type="submit" value="Delete" class="btn btn-danger m-2" />
-                    <a asp-action="Index" asp-controller="kindergartens" class="btn btn-secondary m-2">Back</a>
+                    <a asp-action="Index" asp-controller="Kindergarten" class="btn btn-secondary m-2">Back</a>
                 </form>
             </div>
         </div>
