--- a/ShopTARgv24/Views/Kindergarten/Details.cshtml
+++ b/ShopTARgv24/Views/Kindergarten/Details.cshtml
@@ -57,7 +57,7 @@
                         @Html.DisplayFor(Model => Model.UpdatedAt)
                     </div>
                 </dl>
-                <a asp-action="Index" asp-controller="kindergartens" class="btn btn-secondary m-2">Back</a>
+                <a asp-action="Index" asp-controller="Kindergarten" class="btn btn-secondary m-2">Back</a>
             </div>
         </div>
     </div>
