--- a/ShopTARgv24/Views/Kindergarten/CreateUpdate.cshtml
+++ b/ShopTARgv24/Views/Kindergarten/CreateUpdate.cshtml
@@ -49,6 +49,6 @@ else
         {
             <input asp-action="create" asp-controller="Kindergarten" type="submit" class="btn btn-success m-2" value="Create" />
         }
-        <a asp-action="Index" asp-controller="Kindergarten" class="btn btn-secondary m-2">Back</a>
+        <a asp-action="Index" asp-controller="Kindergarten" class="btn btn-success">Back</a>
     </form>
 </div>
