--- a/ShopTARgv24/Views/Kindergarten/Index.cshtml
+++ b/ShopTARgv24/Views/Kindergarten/Index.cshtml
@@ -11,8 +11,8 @@
 <div class="h1 text-center">Kindergartens</div>
 <form method="post">
     <div class="table-responsive shadow rounded">
-        <table class="table table-striped table-bordered align-middle text-center table-hover">
-            <thead class="table-primary">
+        <table class="table table-hover">
+            <thead>
                 <tr>
                     <th scope="col">Nr</th>
                     <th scope="col">Group name</th>
@@ -33,6 +33,11 @@
                         <td>@kindergartens.ChildrenTotal</td>
                         <td>@kindergartens.Teacher</td>
                         <td>@kindergartens.KindergartenName</td>
+                        <td>
+                            <a asp-action="details" asp-controller="Kindergarten" asp-route-id="@kindergartens.Id" class="btn btn-primary">Details</a>
+                            <a asp-action="update" asp-controller="Kindergarten" asp-route-id="@kindergartens.Id" class="btn btn-primary">Update</a>
+                            <a asp-action="delete" asp-controller="Kindergarten" asp-route-id="@kindergartens.Id" class="btn btn-outline-danger">Delete</a>
+                        </td>
                     </tr>
                     rowNumber++;
                 }
